force-app/main/default/objects/Asset/fields/Latest_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Latest_Mileage__c</fullName>
    <label>Latest Mileage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>