force-app/main/default/objects/Asset/fields/Mileage_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Update_Date__c</fullName>
    <label>Mileage Update Date</label>
    <type>Date</type>
</CustomField>