force-app/main/default/objects/Asset/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <externalId>true</externalId>
    <label>VIN</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>